tests/error/invalid_switch.gw
// [contains] in switch expression. should be 'int'
switch(NULL){}
